<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/piano" />

    <Button
        android:id="@+id/option_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/option_play"
        android:layout_toLeftOf="@+id/imageView1"
        android:text="@string/all_return" />

    <Button
        android:id="@+id/option_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/all_play" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/option_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="130dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/option_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/rg_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/op_bt_time_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/option_time_1" />

            <RadioButton
                android:id="@+id/op_bt_time_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/option_time_3" />

            <RadioButton
                android:id="@+id/op_bt_time_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/option_time_5" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/option_clave"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginLeft="240dp"
            android:layout_toRightOf="@+id/textView3"
            android:text="@string/option_system"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="190dp"
            android:layout_toRightOf="@+id/rg_time"
            android:text="@string/option_sound"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/op_cb_snd_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/rg_time"
            android:text="@string/option_sound_clave" />

        <CheckBox
            android:id="@+id/op_cb_snd_err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/op_cb_snd_act"
            android:layout_centerVertical="true"
            android:text="@string/option_sound_error" />

        <RadioGroup
            android:id="@+id/rg_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignTop="@+id/op_cb_snd_act" >

            <RadioButton
                android:id="@+id/op_rb_sy_sf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_system_solf" />

            <RadioButton
                android:id="@+id/op_rb_sy_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/option_system_ingl" />

            <RadioButton
                android:id="@+id/op_rb_sy_nt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/option_system_notas" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/op_cb_cl_sol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignTop="@+id/rg_system"
            android:text="@string/option_clave_sol" />

        <CheckBox
            android:id="@+id/op_cb_cl_fa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/op_cb_snd_err"
            android:layout_alignBottom="@+id/op_cb_snd_err"
            android:layout_alignLeft="@+id/op_cb_cl_sol"
            android:text="@string/option_clave_fa" />

        <CheckBox
            android:id="@+id/op_cb_cl_do3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rg_time"
            android:layout_alignLeft="@+id/op_cb_cl_fa"
            android:text="@string/option_clave_do3" />

        <CheckBox
            android:id="@+id/op_cb_cl_do4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/op_cb_cl_do3"
            android:layout_below="@+id/op_cb_cl_do3"
            android:layout_marginTop="10dp"
            android:text="@string/option_clave_do4" />
    </RelativeLayout>

</RelativeLayout>